@@ -20,7 +20,7 @@ public class VanillaGearHandler implements IPhasedInitializer {
     public void postInit(SRegistry registry, FMLPostInitializationEvent event) {
         // TODO: Configs!
         // Reduce durability instance vanilla tools to discourage use
-        String[] toolTypes = {"pickaxe", "shovel", "axe", "sword", "hoe"};
+        String[] toolTypes = {"pickaxe", "shovel", "axe", "sword"};
         String[] toolMaterials = {"wooden", "stone", "iron", "golden", "diamond"};
         for (String type : toolTypes) {
             for (String mat : toolMaterials) {
