@@ -1,7 +1,9 @@
 0.0.7 (preview 7, 1.12.2)
 Added: New main parts: obsidian, netherrack, and terracotta
+Added: Config to specify items that work with block-placing tools. Default list includes dank/null and a couple other items.
 Changed: Improvements to how gear part data is passed around, which seems to improve frame rate (FPS)
 Changed: Gear can no longer be repaired with lower-tier materials
+Changed: Un-nerfed vanilla hoes. You're welcome.
 Fixed: Materials not considering grade when displaying stats
 Fixed: Armor durability being silly (added "armor durability" stat to correct this)
 Fixed: Armor breaking permanently (hopefully)
